techvibe-namespace/techvibe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tech-vibe-deployment
  labels:
    app: techvibe
  namespace: techvibe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: techvibe
  template:
    metadata:
      labels:
        app: techvibe
    spec:
      nodeSelector:
        kubernetes.io/hostname: techvibe-jenkins-node-wwxbo
      containers:
        - name: techvibe
          image: siripoom/techvibe:main11
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
            initialDelaySeconds: 60
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
            initialDelaySeconds: 30
          ports:
            - containerPort: 3000
              name: techvibe-tcp
              protocol: TCP
